# min1pipe

./: .gitignore  README_PYTHON.md  pyproject.toml  separation_judgement.executed.ipynb  separation_judgement.ipynb
.claude-octopus/: state.json
artifacts/analysis/: matlab_callgraph.json  matlab_callgraph_edges.csv  matlab_inventory.json  matlab_inventory.md  matlab_to_python_mapping.csv  toolbox_gap_matrix.md
artifacts/parity/: module_fixtures.json
artifacts/reports/: conversion_status.md  notion_progress.md  notion_progress_min1pipe.md  separation_root_cause_report.md
docs/: python_project_structure.md
notebooks/: min1pipe_visualizations.executed.ipynb  min1pipe_visualizations.ipynb
scripts/: bootstrap_venv.sh  compare_demo_outputs.py  compare_monolith_modular.py  compare_separation_strict.py  run_demo_alignment_gate.sh  run_matlab_demo_reference.sh  run_modular_capture.py  run_monolith_modular_qa_gate.sh  run_monolithic_capture.py  run_parity_matrix.py  run_separation_strict_gate.sh
separation/: _generate_notebooks.py  build_strict_fixtures.py  capture_intermediates.py  nb01_motion_correction.ipynb  nb02_source_detection.ipynb  nb03_component_filtering.ipynb  nb04_calcium_deconvolution.ipynb  nb05_full_pipeline.ipynb  pipeline_strict.py  test_pipeline_integration.py
separation/_shared/: __init__.py  fixtures.py  indexing.py  math_utils.py  params.py
separation/_test_data/: pipeline_config.pkl
src/min1pipe/: cli.py  (+2 more)
tests/: conftest.py
tools/: generate_conversion_report.py  generate_parity_fixtures.py  generate_python_mirror.py  matlab_inventory.py
(+206 files in other folders)
