[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "min1pipe-python"
version = "0.1.0"
description = "MATLAB-to-Python migration of MIN1PIPE"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "MIN1PIPE Migration" }
]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "h5py>=3.8",
  "matplotlib>=3.7",
  "imageio>=2.31",
  "tifffile>=2023.0",
  "networkx>=3.0",
  "PyWavelets>=1.6"
]

[project.optional-dependencies]
vision = [
  "scikit-image>=0.22",
  "opencv-python>=4.9"
]
opt = [
  "cvxpy>=1.5",
  "scikit-learn>=1.4"
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "jupyter>=1.0",
  "nbformat>=5.10",
  "ruff>=0.4"
]

[project.scripts]
min1pipe = "min1pipe.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
